# auth0-fastapi-authentication

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: develop  format  install  lint
src/app/: __init__.py  application.py  auth.py  config.py  route_dependencies.py  routes.py
